--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -28,10 +28,10 @@ WebServer:
   # Resource requests and limits per container
   Resources:
     Requests:
-      CPU: 1
+      CPU: 0.3
       Memory: 1Gi
     Limits:
-      CPU: 1
+      CPU: 0.3
       Memory: 1Gi
 
 
@@ -44,8 +44,6 @@ NodePorts:
 # Ingress control settings
 Ingress:
   # If true, use Ingress control.
-  # Otherwise, generic LoadBalancer networking will be used,
-  # and the other settings in this section will be ignored.
   Enabled: false
-  # The subdomain to associate with this service.
+  # The subdomain to associate with this service. Add it to /etc/hosts
   Host: nextflow-api-dev.net
